[gd_scene load_steps=6 format=3 uid="uid://djeswshcnoath"]

[ext_resource type="Theme" uid="uid://weaopiyujqgb" path="res://Shared/PixelTheme/pixel_theme.tres" id="1_hpa7f"]
[ext_resource type="PackedScene" uid="uid://tcvkyspk3vu" path="res://GUI/InventoryPanel.tscn" id="1_tl2gl"]
[ext_resource type="Script" path="res://GUI/QuickbarInventoryPanel.gd" id="2_db8ab"]
[ext_resource type="Texture2D" uid="uid://cfxunkeb3k15u" path="res://Shared/PixelTheme/Images/Toggle1.png" id="4_dhq5j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ie1k"]
bg_color = Color(0.15625, 0.207031, 0.359375, 1)
border_width_left = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.078125, 0.859375, 0.929688, 1)

[node name="QuickbarInventoryPanel" type="VBoxContainer"]
offset_right = 16.0
offset_bottom = 30.0
theme = ExtResource("1_hpa7f")
theme_override_constants/separation = -1
script = ExtResource("2_db8ab")

[node name="Label" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 6
text = "2"
horizontal_alignment = 1
vertical_alignment = 2

[node name="MarginContainer2" type="MarginContainer" parent="."]
z_index = 1
layout_mode = 2
theme_override_constants/margin_bottom = -17

[node name="CooldownLabel" type="Label" parent="MarginContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 6
text = "12"
horizontal_alignment = 1

[node name="InventoryPanel" parent="." instance=ExtResource("1_tl2gl")]
layout_mode = 2
size_flags_horizontal = 0

[node name="CooldownProgress" type="TextureProgressBar" parent="."]
modulate = Color(0, 0, 0, 0.784314)
layout_mode = 2
size_flags_horizontal = 0
max_value = 1.0
step = 0.05
fill_mode = 2
texture_progress = ExtResource("4_dhq5j")
texture_progress_offset = Vector2(0, -15)

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = -13
theme_override_constants/margin_bottom = 7

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(14, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6ie1k")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
custom_minimum_size = Vector2(14, 0)
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = -5
theme_override_constants/margin_bottom = -9

[node name="CostLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
modulate = Color(0.901961, 0.635294, 0.231373, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 4
text = "200"
horizontal_alignment = 1
